fixed text overflow in the card

--- a/style.scss
+++ b/style.scss
@@ -7,20 +7,22 @@ body {
   color: $primary-color;
 }
 
-.cards {
-  display: grid;
-  grid-template-columns: repeat(5, 180px);
-  grid-template-rows: repeat(5, 250px);
-  gap: 25px;
-}
-
 .heading {
   text-align: center;
   font-size: x-large;
 }
 
+.cards {
+  // justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(6, 180px);
+  grid-template-rows: repeat(5, 250px);
+  gap: 20px;
+}
+
 .card {
-  position: relative;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   font-size: 2em;
@@ -31,26 +33,36 @@ body {
   }
 
   > h2 {
+    grid-row: 2;
     font-size: 0.75em;
     text-align: center;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding-left: 3%;
+    padding-right: 3%;
+    align-self: center;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    max-height: 148px;
   }
 
   > h3 {
-    position: absolute;
+    height: auto;
     margin: 0;
 
     &:first-of-type {
-      top: 10px; left: 10px;
+      grid-row: 1 1;
       font-size: 0.5em;
+      align-self: start;
+      justify-self: start;
+      padding-left: 3%;
+      padding-top: 3%;
     }
 
     &:last-of-type {
-      bottom: 10px; right: 10px;
+      grid-row: 1 1;
       font-size: 1em;
+      align-self: end;
+      justify-self: end;
+      padding-right: 4%;
     }
   }
 
@@ -68,9 +80,7 @@ body {
     }
 
     > form {
-      position: absolute;
-      top: 30%;
-      left: 5%;
+      text-align: center;
 
       > input:first-of-type {
         margin: 3%;
@@ -98,7 +108,7 @@ body {
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
 
         &:hover {
-          border: 2px solid $done-color;
+          border: 2px solid #007aff;
         }
       }
     }
